Исправление тестов и add метода